--- a/src/SupTrus_frontend/src/index.scss
+++ b/src/SupTrus_frontend/src/index.scss
@@ -39,3 +39,19 @@ button[type="submit"] {
 .browser-warning {
   display: none;
 }
+body,
+html,
+#root {
+  height: 100%;
+  margin: 0;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.main-content {
+  flex: 1;
+}
